--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.1.3",
+    "firebase": "^9.4.1",
+    "google-maps-react": "^2.0.6",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
+    "react-responsive": "^9.0.0-beta.6",
+    "react-router-dom": "^6.0.0-alpha.2",
     "react-scripts": "4.0.3",
+    "reactstrap": "^9.0.1",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
